# n-bits-py

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  n-bits  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: LICENSE.tmpl
.github/workflows/: publish.yml  publish_test.yml  pytest.yml
src/n_bits/: __init__.py  analyze.py  bits.py  hf.py  main.py  prng.py
tests/: test_bits.py  test_main.py  test_prng.py
