[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n_bits"
version = "0.1.0"
authors = [
    { name="Marc-Antoine Ruel", email="g@maruel.ca" },
]
description = "TODO"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gnuplotlib>=0.42",
    "huggingface_hub>=0.26.2",
    "numpy>=2.1.3",
    "safetensors>=0.4.5",
    "torch>=2.5.1",
]

[project.scripts]
n-bits = "n_bits.main:main"

[project.urls]
Homepage = "https://github.com/maruel/n-bits-py"
Issues = "https://github.com/maruel/n-bits-py/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=2.0.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
